# nacos-mcp-router

./: Dockerfile  README.md  pyproject.toml
src/python/: README.md  README_cn.md
src/python/src/nacos_mcp_router/: proxy.py  router.py
